# pipeline-genai-api-crm

./: .env.example  404.html  README.md  app.py  contrato.py  database.py  index.html  main.py  mkdocs.yml  pyproject.toml
docs/: index.md
site/: objects.inv
site/search/: search_index.json
